// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar (character-sheet) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "15%",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "fontSize": 27.546799160701053,
          "height": "20%",
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "height": "30%",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          [ Character ]
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Timelines
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Feed (2)
        </Text>
      </View>
    </View>
    <Image
      source={1}
      style={
        Object {
          "height": "30%",
          "resizeMode": "stretch",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (different route) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "15%",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "fontSize": 27.546799160701053,
          "height": "20%",
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "height": "30%",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Character
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Timelines
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Feed (2)
        </Text>
      </View>
    </View>
    <Image
      source={1}
      style={
        Object {
          "height": "30%",
          "resizeMode": "stretch",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (timeline-grid) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "15%",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "fontSize": 27.546799160701053,
          "height": "20%",
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "height": "30%",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Character
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          [ Timelines ]
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Feed (2)
        </Text>
      </View>
    </View>
    <Image
      source={1}
      style={
        Object {
          "height": "30%",
          "resizeMode": "stretch",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (timeline-grid) => renders correctly 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "15%",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "fontSize": 27.546799160701053,
          "height": "20%",
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "height": "30%",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Character
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Timelines
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 27.546799160701053,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          [ Feed (2) ]
        </Text>
      </View>
    </View>
    <Image
      source={1}
      style={
        Object {
          "height": "30%",
          "resizeMode": "stretch",
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (winner declared) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#141313",
      "flexDirection": "column",
      "height": "100%",
      "paddingBottom": 5,
      "paddingTop": 5,
      "width": "100%",
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "height": "8%",
        "resizeMode": "stretch",
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#141313",
          "color": "#329932",
          "flex": 1,
          "fontFamily": "telegrama_raw",
          "fontSize": 61.21510924600233,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      GAME OVER
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#141313",
          "color": "#329932",
          "flex": 1,
          "fontFamily": "telegrama_raw",
          "fontSize": 61.21510924600233,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      Winner: 
      Aram
    </Text>
    <Image
      source={
        Object {
          "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#141313",
          "borderColor": "black",
          "flex": 2,
          "marginBottom": 20,
          "maxHeight": 200,
          "maxWidth": 200,
          "resizeMode": "stretch",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "green",
            "height": "100%",
            "opacity": 0.5,
            "width": "100%",
          }
        }
      />
    </Image>
  </View>
  <Image
    source={1}
    style={
      Object {
        "height": "8%",
        "resizeMode": "stretch",
        "width": "100%",
      }
    }
  />
</View>
`;
